--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -9,9 +9,13 @@
 
 name: Create and publish a Docker image
 
+# on:
+#   push:
+#     branches: ['main']
+
 on:
-  push:
-    branches: ['release']
+  release:
+    types: [created]
 
 env:
   REGISTRY: ghcr.io
